Implement javafx tutorial part 3

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
-    id 'checkstyle'
+//    id 'checkstyle'
 }
 
 repositories {
@@ -44,7 +44,7 @@ test {
 }
 
 application {
-    mainClass.set("chuck.Chuck")
+    mainClass.set("chuck.Launcher")
 }
 
 shadowJar {
@@ -52,11 +52,11 @@ shadowJar {
     archiveClassifier = null
 }
 
-checkstyle {
-    toolVersion = '11.0.0'
-}
+//checkstyle {
+//    toolVersion = '11.0.0'
+//}
 
-run{
+run {
     standardInput = System.in
 }
 
