Fix encoding issue

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,14 @@ test {
     }
 }
 
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
+tasks.withType(Javadoc) {
+    options.encoding = 'UTF-8'
+}
+
 application {
     mainClass.set("chuck.Chuck")
 }
